lates API related to Hotel and Jot are updated.

--- a/public/modules/dashboard/views/dashboard-home.html
+++ b/public/modules/dashboard/views/dashboard-home.html
@@ -61,11 +61,11 @@
 			</ul>
 		</div>
 	</div>
-	<div class="dash_hd">Hotels</div>
+	<div class="dash_hd">Dashboard</div>
 	<div class="clearfix row">
 
 
-		<div class="col-lg-3 col-md-6"  ng-repeat="hotel in hotels" ng-click="redirectToJot()">
+		<div class="col-lg-3 col-md-6"  ng-repeat="hotel in hotels" >
 			<div class="dash_hotel_top">
 				<h4><a href="javascript:;"> {{hotel.hotelname}}</a></h4>
 				<i>{{hotel.address}}</i>
