1) implementation of delete hotel. 2) dynamic quick jot field - Assignment, Department, Date, Priority 3) Valdatoin issue of register field & change data model 4) Integrate side bar html 5) Header hotel list dynamic

--- a/public/assets/css/layout.style.css
+++ b/public/assets/css/layout.style.css
@@ -22,3 +22,9 @@ md-input-container .md-errors-spacer{min-height: 17px;}
 bx-slider{
 	position: relative;    display: block;
 }
+.frontheder{width: 100%; padding:10px;}
+.frontnav ul > li{float: left; padding: 0 17px; }
+.frontnav ul > li > a{display: block; font-weight: 600; font-size: 15px; color: #737681; text-transform: uppercase;}
+.frontnav ul > li > a:hover, .frontnav > li > a:focus{text-decoration: none;}
+.frontnav_login ul > li {float: left; margin-left: 10px;}
+.frontnav_login ul > li > a{font-size: 15px; color: #484e64;}
