--- a/public/modules/dashboard/views/dashboard-home.html
+++ b/public/modules/dashboard/views/dashboard-home.html
@@ -1,75 +1,21 @@
 <div class="dash-main-con">
 
-<!-- header -->
-<div class="dash_home_header clearfix">
-	<duv class="dash_home_header_logo pull-left">
-		<a href="javascript:;"><img src="assets/images/dash-logo.png"></a>
-	</duv>
-	<duv class="dash_home_header_menu pull-right">
-		<ul class="dash_home_header_menu_list">
-			<li class="noti_icon positionrel">
-				<ng-md-icon icon="notifications" style="fill: white" size="30"></ng-md-icon>
-				<small class="notification-badge">5</small>
-			</li>
-			<li class="usermenu">
-				<md-menu md-position-mode="target-right target" md-offset="0 80">
-		          <md-button aria-label="Open demo menu" class="md-icon-button" ng-click="$mdMenu.open($event)">
-		          	<i class="user_dp_header"><img src="assets/images/user_dp_header.png"></i>
-		          	<ng-md-icon icon="keyboard_arrow_down" style="fill: white" size="25"></ng-md-icon>
-		          </md-button>
-		          <md-menu-content width="3" >
-		            <md-menu-item ng-repeat="item in [1]">
-		              <md-button ng-click="clearToken(); announceClick($index)">
-		                  <div layout="row">
-		                    <p>Logout</p>
-		                    <md-icon md-menu-align-target md-svg-icon="call:portable-wifi-off" style="margin: auto 3px auto 0;"></md-icon>
-		                  </div>
-		              </md-button>
-		            </md-menu-item>
-		          </md-menu-content>
-		        </md-menu>
-			</li>
-		</ul>
-	</duv>
-</div>
-<!--End header -->
 <!--middle panel -->
 <section class="dashrightsection">
-	<div class="left_side_menu">
-		<div class="toogle_menu">
-			<!-- <span>dashboard</span> -->
-			<ng-md-icon icon="menu" class="cursor" style="fill:white" size="24"></ng-md-icon> 
-		</div>
-		<div class="toogle_menu_list">
-			<ul>
-				<li>
-					<ng-md-icon icon="email" class="cursor" style="fill:#a3a3a3" size="24"></ng-md-icon> 
-					<span></span>
-				</li>
-				<li>
-					<ng-md-icon icon="insert_drive_file" class="cursor" style="fill:#a3a3a3" size="24"></ng-md-icon> 
-					<span></span>
-				</li>
-				<li>
-					<ng-md-icon icon="business" class="cursor" style="fill:#a3a3a3" size="24"></ng-md-icon> 
-					<span></span>
-				</li>
-				<li>
-					<ng-md-icon icon="settings" class="cursor" style="fill:#a3a3a3" size="24"></ng-md-icon> 
-					<span></span>
-				</li>
-			</ul>
-		</div>
-	</div>
-	<div class="dash_hd">Dashboard</div>
+	
+	<div class="dash_hd">Hotels</div>
 	<div class="clearfix row">
 
 
-		<div class="col-lg-3 col-md-6"  ng-repeat="hotel in hotels" >
-			<div class="dash_hotel_top">
-				<h4><a href="javascript:;"> {{hotel.hotelname}}</a></h4>
+		<div class="col-lg-3 col-md-6 hideHotel"  ng-repeat="hotel in hotels" 
+			            ng-hide="hideHotel">
+
+			<div class="dash_hotel_top" ng-click="redirectToJot(hotel._id,hotel.hotelname)">
+				<h4><a href="javascript:void(0);"> {{hotel.hotelname}}</a></h4>
+
 				<i>{{hotel.address}}</i>
 			</div>
+			<label class="delete_hotel"><ng-md-icon ng-click="deleteHotel($event,hotel._id); hideHotel = ! hideHotel"  icon="cancel" style="fill:#7a7a7a" size="18"></ng-md-icon></label>
 			<div class="dash_hotel_bot">
 				<div class="status_info">
 					<ul class="clearfix">
