--- a/public/modules/register/views/register.tpl.html
+++ b/public/modules/register/views/register.tpl.html
@@ -1,4 +1,9 @@
-
+<!-- <md-dialog class="login_dialog" aria-label="login">
+  
+  <md-button class="md-icon-button login_close" arai-label="close" ng-click="close()">
+  		<ng-md-icon icon="close" style="fill:black" size="24"></ng-md-icon>
+  </md-button>
+    <md-dialog-content> -->
     <form name="SignupForm" ng-submit="registerUser(SignupForm.$valid)" novalidate>
       <div class="md-dialog-content login_content signupform">
       	<div class="pull-right rightlogin ">
