--- a/public/assets/css/dashboard-home.style.css
+++ b/public/assets/css/dashboard-home.style.css
@@ -1,5 +1,5 @@
 .dash-main-con{background: #f4f8f9; min-height: 100%; position: relative;}
-.dash_home_header{width: 100%; background: #4ebdf6; position: relative; z-index: 10; position: fixed; left: 0; top:0; right: 0;}
+.dash_home_header{width: 100%; background: #4ebdf6;   z-index: 10; position: absolute; left: 0; top:0; right: 0;}
 .dash_home_header_logo{padding: 11px 20px; display: block;}
 .dash_home_header_logo a{display: block;}
 .dash_home_header_menu_list > li {float: left; height: 58px;}
@@ -10,6 +10,7 @@
 .dash_home_header_menu_list > li.usermenu i{position: absolute; left: 10px;top: 13px; }
 .dash_home_header_menu_list > li.usermenu .md-button.md-icon-button{width: 88px;height: 58px; padding: 0; padding-left: 30px; margin: 0}
 .dashrightsection {margin-left: 65px; padding: 90px 30px 30px 30px;  background: #f4f8f9; width: auto;-webkit-transition: all 0.1s ease-in-out;-moz-transition: all 0.1s ease-in-out;-o-transition: all 0.1s ease-in-out;-ms-transition: all 0.1s ease-in-out;transition: all 0.1s ease-in-out;}
+.dashrightsection.leftopen {margin-left: 300px; }
 .dash_hd{font-size: 20px; color: #4b4c4d; font-weight: 800; margin-bottom: 20px;}
 .dash_hotel_top{padding: 15px; background: #edf0f2;}
 .dash_hotel_top_new{background: #c8c8c8; cursor: pointer; padding: 15px; margin-bottom: 20px;}
@@ -34,11 +35,37 @@
 .job_priorty_bot ul > li{float: left; font-size: 12px; color: #7a7a7a; margin-right: 10px; margin-bottom: 5px;}
 .job_priorty_bot ul > li ng-md-icon{width: 12px;height: 15px; margin-right: 3px;}
 /********************************left side menu***************************/
-.left_side_menu{width: 65px;z-index: 9;height: 100%; position: fixed; top:0; left: 0; bottom: 0; background: #313942; padding-top: 58px;}
-.toogle_menu{padding: 30px 20px; border-bottom: 1px solid #292f37; cursor: pointer;}
+.left_side_menu{overflow-x: hidden; width: 65px;z-index: 9;height: 100%; position: absolute; top:0; left: 0; bottom: 0; background: #313942; padding-top: 58px;-webkit-transition: all 0.1s ease-in-out;-moz-transition: all 0.1s ease-in-out;-o-transition: all 0.1s ease-in-out;-ms-transition: all 0.1s ease-in-out;transition: all 0.1s ease-in-out;}
+.left_side_menu.leftopen{width: 300px;}
+.toogle_menu{padding: 30px 20px 25px 20px;border-bottom: 1px solid #292f37;cursor: pointer;}
+.toogle_menu{display: block;}
+.toogle_menu a{display: block;white-space: nowrap;}
+.toogle_menu span{font-size: 18px;display: none; line-height: 28px; color: #a3a3a3; text-transform: uppercase; font-weight: 600;}
+.left_side_menu.leftopen .toogle_menu span{display: inline-block;}
+.toogle_menu ng-md-icon{vertical-align: top; float: right;}
 .cursor{cursor: pointer;}
-.toogle_menu_list{padding: 15px 0;}
-.toogle_menu_list ul > li{display: block; padding: 15px 20px;  }
+.leftnav_list.panel{background: none; box-shadow: none; -webkit-box-shadow: none; border-radius: 0; -webkit-border-radius: 0; border: 0;}
+.leftnav_list.panel .panel-heading{padding: 0;border-radius: 0; -webkit-border-radius: 0;}
+.leftnav_list.panel .panel-heading .panel-title a{display: block; padding: 15px 20px; }
+.leftnav_list.panel .panel-heading .panel-title a:hover, .leftnav_list.panel .panel-heading .panel-title a:focus{text-decoration: none; }
+.leftnav_list.panel .panel-heading .panel-title a span{color: #9299a2; font-size: 15px; line-height: 24px; font-weight: 600; padding-left: 5px;  text-transform: uppercase; }
+.leftnav_list.panel .panel-heading .panel-title ng-md-icon{vertical-align: top;}
+.toogle_menu_list{padding:15px 0;}
+.toogle_menu_list > ul > li{display: block;}
+.toogle_menu_list > ul > li > a{display: block; padding: 15px 20px; white-space: nowrap; }
+.toogle_menu_list > ul > li > a:hover, .toogle_menu_list ul > li > a:focus{text-decoration: none; }
+.toogle_menu_list > ul > li > a.active span, .toogle_menu_list ul > li > a:hover span{color: #fff;}
+.toogle_menu_list > ul > li > a span{color: #9299a2; font-size: 15px; line-height: 24px; font-weight: 600; padding-left: 30px;  text-transform: uppercase; }
+.left_side_menu.leftopen > ul > li > a span{padding-left: 5px;}
+.toogle_menu_list > ul > li > a ng-md-icon{vertical-align: top; color:#9299a2; }
+.toogle_menu_list > ul > li > a.active ng-md-icon, .toogle_menu_list ul > li > a:hover ng-md-icon{color: #fff;}
+.sub_menu > li {display: block; display: none;}
+.sub_menu > li{border-bottom: 1px solid #292f37;}
+.sub_menu > li:last-child{border-bottom: 0px;}
+.sub_menu > li > a{display: block; white-space: nowrap; position: relative; padding: 10px 15px 10px 55px;color: #9299a2; font-size: 15px; line-height: 24px; font-weight: 600;  }
+.sub_menu > li > a:after{content: ''; width: 4px; height: 4px; background: #9299a2; position: absolute; left:40px; top:0; bottom: 0; margin: auto; border-radius: 50%; -webkit-border-radius: 50%; }
+.sub_menu > li > a:hover, .sub_menu > li > a:focus{color: #fff; text-decoration: none;}
+.sub_menu > li > a:hover:after, .sub_menu > li > a:focus:after{background: #fff;}
 /**********************************hotel page*********************************/
 .add_hotel_top{background: #fff; padding: 15px;}
 .add_hotel_top .add_hotel_icon{font-size: 18px;margin: 0 0px 10px 0; color: #4b4c4d; font-weight: 600;display: -webkit-flex; display:flex;}
@@ -70,11 +97,75 @@
 .dash_extra_menu:hover, .dash_extra_menu:focus{text-decoration: none; color: #313942;}
 .dash_home_header_logo_center{position: absolute; width: 114px; height: 114px; margin: auto; left: 0; right: 0; top:0;}
 .dash_hotel_menu_list > li{float: left; margin: 0 10px;}
-.dash_hotel_menu_list > li > a{line-height: 58px; display: inline-block; position: relative; color: #fff; text-transform: uppercase;}
+.dash_hotel_menu_list > li > a{line-height: 58px; display: inline-block; position: relative; color: #caebfc; text-transform: uppercase;}
 .dash_hotel_menu_list > li > a:after{content: '';-webkit-transition: all 0.3s ease-in-out;-moz-transition: all 0.3s ease-in-out;-o-transition: all 0.3s ease-in-out;-ms-transition: all 0.3s ease-in-out;transition: all 0.3s ease-in-out; width: 0%; height: 3px; background: #fff; top:0; left: 50%; position: absolute;}
-.dash_hotel_menu_list > li > a:hover, .dash_hotel_menu_list > li > a:focus{text-decoration: none;}
+.dash_hotel_menu_list > li > a:hover, .dash_hotel_menu_list > li > a:focus{text-decoration: none; color: #fff;}
 .dash_hotel_menu_list > li > a:hover:after{width: 100%; left: 0;}
 .hotel_drop{width: 230px; padding: 0 20px; background: #4288ae; font-size: 22px; font-weight: 800; line-height: 58px; color: #fff;}
+/************************************quick jot form**********************/
+.Quick_jot_list{padding: 15px 0 0 0; border-bottom: 1px solid #dadddd;}
+.Quick_jot_list ul{-ms-flex-wrap: wrap;flex-wrap: wrap;}
+.Quick_jot_list ul > li > a{text-align: center; font-weight: 600; display: block; position: relative; padding-bottom: 15px;}
+.Quick_jot_list ul > li > a:after{content: '';-webkit-transition: all 0.3s ease-in-out;-moz-transition: all 0.3s ease-in-out;-o-transition: all 0.3s ease-in-out;-ms-transition: all 0.3s ease-in-out;transition: all 0.3s ease-in-out; width: 0%; height: 3px; background: #4ebdf6; top:100%; left: 50%; position: absolute;}
+.Quick_jot_list ul > li > a.active span, .Quick_jot_list ul > li > a:hover span{color: #000;}
+.Quick_jot_list ul > li > a.active:after, .Quick_jot_list ul > li > a:hover:after{left: 0; width: 100%;}
+.Quick_jot_list ul > li > a:hover{text-decoration: none;}
+.Quick_jot_list ul > li > a span{font-size: 14px; margin-top: 5px; display: block; text-transform: uppercase; color: #4f4f4f; }
+.jot_prity > li{float: left; margin-right: 5px;}
+.jot_prity > li > a{display: block; padding: 5px 10px; border: 1px solid #ddd; background: #fff; color: #7b7b7b; font-size: 12px;}
+.jot_prity > li > a:hover, .jot_prity > li > a.active{text-decoration:none; background: #de4a35; border-color: #de4a35; color: #fff;}
+.jot_prity_txt{line-height: 29px; margin-right: 10px;}
+.newhotel_dialog_form .date_due md-input-container label{bottom: 94%;left: 10px; font-size:13px;}
+.newhotel_dialog_form .date_due md-input-container .md-input{height: auto; width: 179px; padding: 2px 10px;background: #fff;}
+.tag_room_list > li{float: left; padding: 5px 10px; margin: 0 5px 5px 0; background: #c0c0c0; font-size: 12px; color: #fff;}
+.Jot_type > li{float: left; margin: 0 5px 5px 0; }
+.Jot_type > li > a{background: #fff;display: block; padding: 5px 15px; border: 1px solid #ddd;font-size: 12px; color: #7b7b7b; }
+.Jot_type > li > a:hover, .Jot_type > li > a.active{ text-decoration: none; background: #2aaae0; color: #fff; border-color: #2aaae0;}
+.addyellobtn {margin: 0;width: 100%; display: block;font-weight: 600!important;color: #fff!important;text-transform: uppercase;font-size: 15px;border-radius: 0;-webkit-border-radius: 0; padding: 0px 15px;}
+.addyellobtn.yellowbtn, .addyellobtn.yellowbtn:hover{background: #ffbb42;}
+.addyellobtn.bluebtn, .addyellobtn.bluebtn:hover{background: #2aaae0;}
+.addyellobtn.graybtn, .addyellobtn.graybtn:hover{background: #9d9d9d;}
+/******************************************quick issue form***************************/
+.Selectdep_txt{font-size: 16px; color: #4d4d4d; font-weight: 600; padding-bottom: 5px;}
+.Select_txt_list > li{float: left; margin: 0 5px 5px 0; }
+.Select_txt_list > li > a{background: #fff;display: block; padding: 10px 20px; border: 1px solid #ddd;font-size: 14px; color: #7b7b7b; }
+.Select_txt_list > li > a:hover, .Select_txt_list > li > a.active{ text-decoration: none; background: #2aaae0; color: #fff; border-color: #2aaae0;}
+.Check_list_btn{width: 200px; margin-bottom: 15px;}
+.Check_list_btn_chk{padding: 15px 15px 0 15px; margin-bottom: 20px; background: #e1e3e4;}
+.add_sub_item{margin-bottom: 20px;}
+.add_sub_item ul > li {float: left; margin: 0 10px 0px 0; }
+.add_sub_item ul > li > a{background: none;display: block; padding: 5px 20px; border: 1px solid #ddd;font-size: 12px; color: #7b7b7b; text-transform: uppercase; }
+.add_sub_item ul > li > a:hover, .add_sub_item ul > li > a.active{ text-decoration: none; background: #ffbb42; color: #fff; border-color: #ffbb42;}
+.uploadimage_list > li{float: left; margin: 0 10px 10px 0;  }
+.uploadimage_list > li span{display: block; text-align: center; font-size: 12px;  color: #3e3e3e;}
+.uploadimage_list > li .imgcon{width: 90px; height: 90px; background: #e1e3e4;margin-bottom: 5px;  }
+.uploadimage_list > li .imgcon img{width: 100%;}
+.uploadimage_list > li .uplosd_img_ab{width: 90px; height: 90px; opacity: 0; position: absolute; left: 0; top:0; bottom: 0; right: 0; z-index: 2;}
+.uploadimage_list > li ng-md-icon{width: 50px;height: 50px;margin: 0px auto; display: block;padding-top: 22px; padding: 16px; transform: rotate(45deg); -webkit-transform: rotate(45deg);}
+
+
+
+
+
+
+
+
+
+.center_circle{border-width:2px; border-color: #5299bd; border-style: solid;  width: 90px;height: 90px;border-radius: 50%;-webkit-border-radius:50%;background:#3da0d3;position: absolute; left: 0; right: 0; top:75px; margin: auto; z-index: 3;box-shadow: 0 0 15px 3px rgba(0,0,0,0.2);}
+.center_circle a{line-height: 90px; display: block; padding: 0 5px;color: #fff; font-size: 15px; font-weight: 600; text-align: center;}
+.center_circle a:hover, .center_circle a:focus{text-decoration: none;}
+.iconHover {background:#4ebdf6; border-radius:50%; height:5rem; left:50%; margin-top:0; opacity:0; pointer-events:none; position:absolute; top:-100%; transform: translate(-50%, -50%) scale(0.8) rotate(100deg); transition: width 0.3s ease 0.3s, height 0.3s ease 0.3s, opacity 0.1s ease 0.3s, transform 0.3s ease 0.3s, z-index 5ms ease 0.6s; width:5rem; z-index:1; overflow:hidden;}
+.iconHover.logocircle {width:23rem; top:50%; height:23rem; -webkit-transform:translate(-50%,-50%); transform:translate(-50%,-50%); opacity:1; -webkit-transition:opacity .1s,width .4s ease-in,height .4s ease-in,-webkit-transform .4s .4s linear;transition:opacity .1s,width .4s ease-in,height .4s ease-in,transform .4s .4s linear; z-index:11; pointer-events:all;}
+.iconHover .icon {position:absolute; width:24px; height:24px; display:block!important; opacity:0; cursor:pointer; border-radius:35px; text-align:center;}
+.iconHover.logocircle .icon{opacity:1; -webkit-transform:none; transform:none;}
+.iconHover.logocircle .icon.onelink{top:84px;left:15px;}
+.iconHover.logocircle .icon.twolink{top:135px;left:25px;}
+.iconHover.logocircle .icon.threelink{top:177px;left:66px;}
+.iconHover.logocircle .icon.fourlink{top:177px;right:66px;}
+.iconHover.logocircle .icon.fivelink{top:135px;right:25px;}
+.iconHover.logocircle .icon.sixlink{top:84px;right:15px;}
+
+
 
 
 
