--- a/public/modules/dashboard/views/add-new-hotel.tpl.html
+++ b/public/modules/dashboard/views/add-new-hotel.tpl.html
@@ -164,7 +164,14 @@
     				<div class="col-md-12">
                     <input type="checkbox" ng-model="terms" name="terms">
 				         I accept the terms and conditions
-                         <div class="validation-message {{validateclass}}">{{message}}</div>
+                        <div class="result {{validateclass}}">
+                            <ul>
+                            <li ng-repeat="message in message">
+                            {{message}}
+                            </li>
+                            <ul> 
+                        </div>
+
 			        </div>
 			    </div> 
 			    <div class="clearfix">
