--- a/public/modules/jot/views/hotel-quick-task.tpl.html
+++ b/public/modules/jot/views/hotel-quick-task.tpl.html
@@ -57,45 +57,45 @@
                 </li>
             </ul>
         </div>
-    	<div class="newhotel_dialog_form">
-    		<div class="row">
-    			<div class="clearfix">
-    				<div class="col-md-12">
-    					<md-input-container class="md-block">
+        <div class="newhotel_dialog_form">
+            <div class="row">
+                <div class="clearfix">
+                    <div class="col-md-12">
+                        <md-input-container class="md-block">
                             <textarea md-no-float class="md-block" ng-model="jot_title" rows="5" ng-required="true"></textarea>
                         </md-input-container>
-    				</div>
-    			</div>
+                    </div>
+                </div>
                 <div class="clearfix">
                     <div class="col-md-3 pull-left date_due" >
                         <md-input-container md-no-float class="md-block">
                             <label>Set Due Date</label>
-                            <md-datepicker md-open-on-focus md-hide-icons="all" ng-model="submission_date"></md-datepicker>
+                            <md-datepicker md-open-on-focus md-hide-icons="all" ng-model="due_date" string-to-timestamp></md-datepicker>
                         </md-input-container>
                     </div>
                     <div class="col-md-7 pull-right text-right" >
                         <span class="jot_prity_txt">Set Priority:</span>
                         <ul class="jot_prity clearfix pull-right">
-                            <li><a href="javascript:;">Urgent (04)</a></li>
-                            <li><a href="javascript:;" class="active">High (04)</a></li>
-                            <li><a href="javascript:;">Medium (05)</a></li>
-                            <li><a href="javascript:;">Low (02)</a></li>
+                           <li ng-repeat="jotPriority in jotPriorityList">
+                            <a href="javascript:void(0);" ng-class="{active : jot_priority === jotPriority.name}" class="{{jotPriority.class}}" ng-click='selectPriority($event,jotPriority.name)'>{{jotPriority.name}}</a>
+                         </li>
+                          <input type="hidden" name="jot_priority" value="{{jot_priority}}" ng-model="jot_priority">
                         </ul>
                     </div>
                 </div>
-    			<div class="clearfix">
-    				<div class="col-md-12">
-    					<md-input-container md-no-float class="md-block">
-				            <input  ng-model="user.Phone" placeholder="@ Staff Manager Name with Note for Manager">
-				        </md-input-container>
-    				</div>
-    				
-    			</div>
-    			<div class="clearfix">
-    				<div class="col-md-12">
-    					<md-input-container md-no-float class="md-block">
-				            <input  ng-model="user.Address" placeholder="# Tag a Room, Department Name, Assign Name  ">
-				        </md-input-container>
+                <div class="clearfix">
+                    <div class="col-md-12">
+                        <md-input-container md-no-float class="md-block">
+                            <input  ng-model="assigned_to" placeholder="@ Staff Manager Name with Note for Manager">
+                        </md-input-container>
+                    </div>
+                    
+                </div>
+                <div class="clearfix">
+                    <div class="col-md-12">
+                        <md-input-container md-no-float class="md-block">
+                            <input  ng-model="department" placeholder="# Tag a Room, Department Name, Assign Name  ">
+                        </md-input-container>
                         <ul class="tag_room_list clearfix mar-bot20">
                             <li>metting</li>
                             <li>metting</li>
@@ -104,26 +104,25 @@
                             <li>metting</li>
                             <li>metting</li>
                         </ul>
-    				</div>
-    			</div>	
-    			<div class="clearfix mar-bot20">
+                    </div>
+                </div>  
+                <div class="clearfix mar-bot20">
                     <div class="col-md-12">
-    				<div class="jot_prity_txt">Jot Type: </div>
-    				<ul class="Jot_type clearfix">
+                    <div class="jot_prity_txt">Jot Type: </div>
+                    <ul class="Jot_type clearfix">
 
                         <li ng-repeat="jotType in jotList">
 
-                            <a href="javascript:void(0);" ng-class="{active : jot_type === jotType.name}" ng-click='jotSelect($event,jotType.name)'>{{jotType.name}}</a>
-
+                             <a href="javascript:void(0);" ng-class="{active : jot_type === jotType.name}" ng-click='jotSelect($event,jotType.name)'>{{jotType.name}}</a>
                             
                          </li>
 
                     </ul> 
                     <input type="hidden" name="jot_type" value="{{jot_type}}" ng-model="jot_type">
                     </div>
-    			</div>
-    			 
-			    <div class="clearfix">
+                </div>
+                 
+                <div class="clearfix">
                     <div class="col-md-2 pull-right addyellobtn_noflot">
                         <md-button class="md-primary addyellobtn graybtn" >CANCEL</md-button>
                     </div>
@@ -131,14 +130,14 @@
                         <md-button type="submit" class="md-primary addyellobtn bluebtn" >SAVE</md-button>
                     </div>
                     
-    				<div class="col-md-3 pull-left addyellobtn_noflot">
-				        <md-button class="md-primary addyellobtn yellowbtn" >ADD ANOTHER JOT</md-button>
+                    <div class="col-md-3 pull-left addyellobtn_noflot">
+                        <md-button class="md-primary addyellobtn yellowbtn" >ADD ANOTHER JOT</md-button>
                     </div>
 
-			    </div>  	
+                </div>      
 
-    		</div>
-    	</div>
+            </div>
+        </div>
         </form>
     </md-dialog-content>
   
