--- a/public/assets/css/mobile.style.css
+++ b/public/assets/css/mobile.style.css
@@ -7,6 +7,8 @@
 }
 @media(max-width:767px){
 	md-dialog {max-width: 100% !important;width: 100%;height: 100%;max-height: 100% !important;}
+	.edit_water_left{width: 100%; float: none; margin-bottom: 20px;}
+	.edit_water_right{idth: 100%; float: none;}
 }
 
 @media(max-width:479px){
