--- a/public/css/main-style.css
+++ b/public/css/main-style.css
@@ -142,10 +142,25 @@
 .uploadimage_list > li .imgcon img{width: 100%;}
 .uploadimage_list > li .uplosd_img_ab{width: 90px; height: 90px; opacity: 0; position: absolute; left: 0; top:0; bottom: 0; right: 0; z-index: 2;}
 .uploadimage_list > li ng-md-icon{width: 50px;height: 50px;margin: 0px auto; display: block;padding-top: 22px; padding: 16px; transform: rotate(45deg); -webkit-transform: rotate(45deg);}
-
-
-
-
+/*****************************************taxt-next-popup************************/
+.recurring_task{float: left; width: 180px; margin-right: 20px;}
+.recurring_task .md-button.md-icon-button{position: absolute;margin: 0;padding: 0;top: -1px;right: 0;    z-index: 2;}
+.recurring_task .md-datepicker-input-container{ margin-left: 0; background: #dfdfdf; display: block; border: 1px solid #ddd; padding: 5px 10px;}
+.Pattern > li{float: left; margin: 0 5px 5px 0; }
+.Pattern > li > a{background: #4ebdf6;display: block; padding: 8px 15px; font-size: 12px; text-transform: uppercase; color: #fff; }
+.Pattern > li > a:hover, .Pattern > li > a.active{ text-decoration: none; background: #ffbb42;}
+.Pattern_radio > li{float: left; margin: 0 15px 0px 0;}
+/*************************************edit hotel-page *************************/
+.edit_water_left{background: #fff; width: calc(100% - 185px); float: left;}
+.edit_water_right{width: 175px; float: right;}
+.edit_water_right_list > li{display: block; margin-bottom: 5px;}
+.edit_water_right_list > li > a{display: inline-block;transition:all 0.5s ease; -ms-transition:all 0.5s ease; -webkit-transition:all 0.5s ease; -o-transition:all 0.5s ease; -moz-transition:all 0.5s ease; line-height: 20px; background: #fff; border: 1px solid #c0c0c0; color: #7b7b7b; padding: 4px 10px; font-size: 15px;}
+.edit_water_right_list > li > a ng-md-icon{vertical-align: top; width: 20px; height: 20px; margin-right: 2px;}
+.edit_water_right_list > li > a:hover, .edit_water_right_list > li > a:focus{margin-left: 5px;background: #4ebdf6; color: #fff; text-decoration: none;border: 1px solid #4ebdf6;}
+.edit_water_left_inner{padding: 15px;}
+.edit_water_bluetxt{color: #444; line-height: 24px; height: 90px; margin-bottom: 20px; width: 100%; padding: 10px; border: 0; resize: none;}
+.editsavecon{padding-top: 20px; margin-top: 20px; border-top:1px solid #cacaca;}
+.editsavecon .addyellobtn {display: inline-block; width: auto;}
 
 
 
@@ -193,6 +208,8 @@
 .newhotel_dialog_form md-input-container md-select-value{padding: 0 15px; font-size: 15px; border: 0; background: #fff; height: 48px;}
 .newhotel_dialog_form md-input-container md-select .md-select-value{padding: 0 15px; color: #222222;}
 .newhotel_dialog_form md-input-container md-select:not([disabled]):focus .md-select-value{border: 0; color: #222222;}
+
+.newhotel_dialog.edit_water{width: 570px;}
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
 * {margin:0; padding:0; outline:0; box-sizing:border-box; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -o-box-sizing:border-box; -ms-box-sizing:border-box;}
 html, body {width:100%; height:100%;}
@@ -254,6 +271,8 @@ bx-slider{
 }
 @media(max-width:767px){
 	md-dialog {max-width: 100% !important;width: 100%;height: 100%;max-height: 100% !important;}
+	.edit_water_left{width: 100%; float: none; margin-bottom: 20px;}
+	.edit_water_right{idth: 100%; float: none;}
 }
 
 @media(max-width:479px){
@@ -403,3 +422,20 @@ md-toast.success .md-toast-content {
   opacity:0;
 }
 
+.chiildchecklist {
+  margin-left: 35px;
+}
+
+.error {
+    color: red;
+    opacity: 0.8;
+    padding: 16px 0 0 0;
+}
+
+.nested .nested {
+    margin-left: 20px;
+}
+
+.uploadimage_list > li .imgcon {
+    cursor: pointer;
+}
